fix button text alignment issues

--- a/features/cdmf-base-ui/org.wso2.carbon.devicemgt.ui.feature/src/main/resources/jaggeryapps/devicemgt/app/units/cdmf.unit.ui.theme/public/css/custom-desktop.css
+++ b/features/cdmf-base-ui/org.wso2.carbon.devicemgt.ui.feature/src/main/resources/jaggeryapps/devicemgt/app/units/cdmf.unit.ui.theme/public/css/custom-desktop.css
@@ -230,6 +230,7 @@ a.ast-type-item:hover {
 .wr-btn-grp .wr-btn {
     width: 20%;
     text-transform: uppercase;
+    text-align: center;
 }
 
 
